# RoSona

./: .env.example  .gitignore  README.md  pyproject.toml
src/rosona/: main.py
src/rosona/core/: config.py  state.py
src/rosona/evidence/: models.py  policy.py
src/rosona/inventory/: avatar_scanner.py  collection_scanner.py  delta.py  event_store.py  events.py  models.py  pseudo.py  pseudo_service.py  pseudo_store.py  rolimons.py  service.py  simulate.py  store.py
src/rosona/presence/: models.py  service.py  store.py
src/rosona/roblox/: client.py  errors.py  models.py  users.py
src/rosona/timeline/: debug.py  events.py  history.py  interval_builder.py  intervals.py  merger.py  models.py  query.py  report.py  seed.py  service.py  store.py  test_report.py
src/rosona/vetting/: debug.py  models.py  report.py  service.py
