[project]
name = "rosona"
version = "0.1.0"
description = "Modern Roblox intelligence platform"
requires-python = ">=3.11"

dependencies = [
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]